fix: interpreter_pythonの設定を追加

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
+interpreter_python=auto_silent
 vault_password_file=./private/ansible_vault_pass.txt
 inventory=./inventories/production/inventory.yml
