--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Run ansible-lint
         uses: ansible/ansible-lint@main
         with:
-          # args: "--skip-list internal-error"
+          args: "--skip-list internal-error"
           setup_python: "true"
           # requirements_file: "./requirements.yml"
