--- a/roles/install_docker/meta/main.yml
+++ b/roles/install_docker/meta/main.yml
@@ -17,9 +17,9 @@ galaxy_info:
 
   min_ansible_version: "2.18"
   platforms:
-    - name: Windows
+    - name: EL
       versions:
-        - "2025"
+        - "9"
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
